<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/editPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/person_image"
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editIvHeight"
            tools:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editMarginTop">

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/editTextSize"
                android:text="@string/date"
                android:textColor="?colorPrimary"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tvDate"
                android:textSize="@dimen/editTextSize"
                tools:text="2023/01/01"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editMarginTop">

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/editTextSize"
                android:text="@string/title"
                android:textColor="?colorPrimary"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/etTitle"
                android:textSize="@dimen/editTextSize"
                android:text="@string/title"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editMarginTop">

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/editTextSize"
                android:text="@string/first_name"
                android:textColor="?colorPrimary"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/etFirstName"
                android:textSize="@dimen/editTextSize"
                android:text="@string/robert"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editMarginTop">

            <TextView
                android:textStyle="bold"
                android:textSize="@dimen/editTextSize"
                android:text="@string/last_name"
                android:textColor="?colorPrimary"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/etLastName"
                android:textSize="@dimen/editTextSize"
                android:text="@string/me_diro"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnCommit"
            android:text="@string/commit"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</ScrollView>